--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,8 @@ members = [
 resolver = "2"
 
 [workspace.dependencies]
+anyhow = "1"
 error-code = { path = "error-code" }
 error-code-derive = { path = "error-code-derive" }
+http = "1"
+thiserror = "1"
