--- a/error-code/Cargo.toml
+++ b/error-code/Cargo.toml
@@ -7,6 +7,8 @@ license = "MIT"
 [dependencies]
 base64 = "0.22.0"
 error-code-derive = { workspace = true }
+serde = { version = "1.0.202", features = ["derive"] }
+serde_json = "1.0.117"
 
 [dev-dependencies]
 anyhow = { workspace = true }
